--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,18 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'  # You can adjust the Node.js version if needed
+
+      - name: Install Vercel CLI
+        run: |
+          npm install -g vercel
+
       - name: Deploy to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: |
-          curl -fsSL https://vercel.com/download -o vercel-cli.deb
-          sudo dpkg -i vercel-cli.deb
           vercel login --token $VERCEL_TOKEN
           vercel --prod
