--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'  # Specify the Python version you want to use
+          python-version: '3.9' 
 
       - name: Install dependencies
         run: |
